# opper-web-indexer-action

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yaml
src/: main.py
